--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,176 @@
+/* START: GENERAL STYLING */
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif !important;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif !important;
+  background-color: rgba(36, 23, 44, 0.9);
 }
 
-
 .navbar {
-    
+  background-color: rgb(181, 166, 206);
+  color: darkslateblue;
+  
+
 }
 
 .navbar-nav {
-    margin: 20px auto; 
+  margin: 20px auto;
 }
 
 .navbar-nav a {
-    text-decoration: none;
-    font-size: 14px;
-    padding: 10px;
-   
-} 
+  text-decoration: none;
+  padding: 25px;
+  color: #000;
+  font-weight: 600;
+}
+
+.social-media ul {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+.social-media ul li {
+  list-style: none;
+  padding: 10px;
+}
+
+.navbar-nav a:hover {
+    color: rgb(145, 65, 145);
+
+  }
+
+
+
+/* START: HOME page styling */
+
+.home-body {
+  width: 100%;
+  height: 100vh;
+  background-image: url("./img/home-bg.jpg");
+    background-size: cover;
+
+}
+.home-main-row {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 .card {
-   margin: 10% auto;
-   border: none;
+  border: none;
+  background-color: rgb(250, 248, 253);
 }
 
-.social-media ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+/* START: ABOUT page styling */
+
+.about-body {
+  margin: 10% auto;
+  width: 100%;
+  height: auto;
+  background-image: url("./img/bgt.jpg");
+  background-size: cover;
+  border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.social-media ul li{
-    list-style: none;
-    padding: 10px;
+.about-body h1 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: #000;
+  margin-top: 20px;
+}
+
+.about-body p {
+  margin-top: 20px;
+  padding: 0 50px;
+}
+
+.avatar {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin: 5% auto;
+  display: block;
+}
+
+.stack-column {
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+.back-next-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+}
+
+/* START: PORTFOLIO page styling */
+
+.portfolio-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 25px auto 50px auto;
+}
+.portfolio-container h1 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: rgb(212, 185, 228);
+  margin: 25px auto;
+}
+.portfolio-container .social-media {
+  margin: 30px auto 30px auto;
+}
+
+/* START: Contact Page Styling */
+
+.contact-form-container {
+  width: 500px;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  color: rgb(212, 185, 228);
+
+
+}
+
+.contact-form-container h1 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+
+}
+
+.contact-form-container button {
+  width: 100%;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgba(184, 169, 224, 0.8);
+  color: #000;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.contact-form-container label {
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 20px;
+
 }
